<resources>
    <string name="app_name">TicTacToe</string>
    <string name="version">Version: 1.0.0</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="xo">XO</string>
    <string name="winner">WINNER!</string>
    <string name="draw">Draw</string>
    <string name="you">YOU</string>
    <string name="ai">AI</string>
    <string name="about_us">About Us</string>
    <string name="followUs">Follow Us</string>
    <string name="aboutUs_information1">Welcome to doftdare, your software solution partner.
        We are committed to providing you with the best product, focusing on reliability, customer satisfaction and uniqueness.
        Doftdare was founded in Ankara in 2020 by 2 software engineers to develop mobile, game and web software.
        At Doftdare we are excited and proud to be a part of environmentally and user friendly sustainable products.
        We hope you enjoy our products as much as we enjoy presenting them to you. If you have any questions or comments, please do not hesitate to contact us.</string>
    <string name="aboutUs_information2">Best regards, Doftdare Team</string>
    <string name="slogan">Let\'s Code World of Tomorrow</string>
    <string name="gmail">info@doftdare.com</string>
    <string name="ai_on">AI ON</string>
    <string name="ai_off">AI OFF</string>
    <string name="ai_on_text">Artificial Intelligence Active!</string>
    <string name="ai_off_text">Artificial Intelligence Inactive!</string>

    //image button name
    <string name="restarting_image_button_name">Restarting</string>
    <string name="settings_image_button_name">Settings</string>

    //image
    <string name="socialMediaImage">Social Media</string>
</resources>