<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@color/main_page_background">

    <LinearLayout
        android:id="@+id/play_ground_linear_layout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/play_ground_linear_layout">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/btn_1"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/btn_background_color"
                android:textSize="50sp"
                android:textColor="@color/btn_text_color"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:singleLine="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"
                tools:targetApi="o">
            </Button>

            <Button
                android:id="@+id/btn_2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/btn_background_color"
                android:textSize="50sp"
                android:textColor="@color/btn_text_color"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:singleLine="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"
                tools:targetApi="o">
            </Button>

            <Button
                android:id="@+id/btn_3"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/btn_background_color"
                android:textSize="50sp"
                android:textColor="@color/btn_text_color"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:singleLine="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"
                tools:targetApi="o">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/btn_background_color"
                android:textSize="50sp"
                android:textColor="@color/btn_text_color"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:singleLine="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"
                tools:targetApi="o">
            </Button>

            <Button
                android:id="@+id/btn_5"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/btn_background_color"
                android:textSize="50sp"
                android:textColor="@color/btn_text_color"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:singleLine="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"
                tools:targetApi="o">
            </Button>

            <Button
                android:id="@+id/btn_6"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/btn_background_color"
                android:textSize="50sp"
                android:textColor="@color/btn_text_color"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="40sp"
                android:autoSizeTextType="uniform"
                android:singleLine="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"
                tools:targetApi="o">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/btn_background_color"
                android:textSize="50sp"
                android:textColor="@color/btn_text_color"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:singleLine="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"
                tools:targetApi="o">
            </Button>

            <Button
                android:id="@+id/btn_8"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/btn_background_color"
                android:textSize="50sp"
                android:textColor="@color/btn_text_color"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:singleLine="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"
                tools:targetApi="o">
            </Button>

            <Button
                android:id="@+id/btn_9"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/btn_background_color"
                android:textSize="50sp"
                android:textColor="@color/btn_text_color"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="30sp"
                android:autoSizeTextType="uniform"
                android:singleLine="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"
                tools:targetApi="o">
            </Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="2"
        android:id="@+id/information_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/player_scores_linear_layout"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/x_text_view"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/x"
                    android:textStyle="bold"
                    android:textColor="@color/text_color_dark"
                    android:autoSizeTextType="uniform"
                    android:singleLine="true"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    tools:targetApi="o"
                    tools:ignore="NestedWeights">
                </TextView>

                <TextView
                    android:id="@+id/you_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/text_color_dark">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/o_text_view"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/o"
                    android:textStyle="bold"
                    android:textColor="@color/text_color_dark"
                    android:autoSizeTextType="uniform"
                    android:singleLine="true"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    tools:targetApi="o">
                </TextView>

                <TextView
                    android:id="@+id/ai_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ai"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/text_color_dark">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/restarting_game_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_refresh"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:contentDescription="@string/restarting_image_button_name">
            </ImageButton>

            <ImageButton
                android:id="@+id/settings_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_settings"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:contentDescription="@string/settings_image_button_name">
            </ImageButton>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>