<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_color_5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@drawable/style_settings_page_box">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/turkish_language_button"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_baseline_radio_button_unchecked">
                    </ImageButton>

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TR"
                        android:textColor="@color/settings_page_color"
                        android:textSize="25sp"
                        android:textStyle="bold">
                    </TextView>

                    <ImageButton
                        android:id="@+id/english_language_button"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_baseline_radio_button_unchecked">
                    </ImageButton>

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="EN"
                        android:textColor="@color/settings_page_color"
                        android:textSize="25sp"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/settings_page_color">
                </TextView>

                <TextView
                    android:id="@+id/open_close_ai_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/ai_off"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/settings_page_color"
                    android:layout_margin="5dp">
                </TextView>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/ai_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="50dp"
                    android:layout_gravity="center"
                    android:checked="false"
                    app:switchPadding="10dp"
                    android:thumb="@drawable/thumb"
                    app:track="@drawable/track">
                </androidx.appcompat.widget.SwitchCompat>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@drawable/style_settings_page_box">

                <Button
                    android:id="@+id/about_us_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/settings_page_color"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:drawableLeft="@drawable/ic_baseline_info"
                    android:background="@android:color/transparent">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@drawable/style_settings_page_box">

                <ImageButton
                    android:id="@+id/doftdare_web_site"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:scaleType="center"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:src="@drawable/doftdare_logo"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/socialMediaImage">
                </ImageButton>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/settings_page_color">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/followUs"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/settings_page_color"
                    android:textSize="30sp"
                    android:textStyle="bold">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        tools:ignore="NestedWeights">

                        <ImageButton
                            android:layout_weight="1"
                            android:id="@+id/instagramButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:layout_margin="2dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/instagram"
                            android:contentDescription="@string/socialMediaImage">
                        </ImageButton>

                        <ImageButton
                            android:layout_weight="1"
                            android:id="@+id/linkedinButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:layout_margin="2dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/linkedin"
                            android:contentDescription="@string/socialMediaImage">
                        </ImageButton>

                        <ImageButton
                            android:layout_weight="1"
                            android:id="@+id/facebookButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:layout_margin="2dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/facebook"
                            android:contentDescription="@string/socialMediaImage">
                        </ImageButton>

                        <ImageButton
                            android:layout_weight="1"
                            android:id="@+id/twitterButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:layout_margin="2dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/twitter"
                            android:contentDescription="@string/socialMediaImage">
                        </ImageButton>

                        <ImageButton
                            android:layout_weight="1"
                            android:id="@+id/youTubeButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:layout_margin="2dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/youtube"
                            android:contentDescription="@string/socialMediaImage">
                        </ImageButton>

                        <ImageButton
                            android:layout_weight="1"
                            android:id="@+id/yaayButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:layout_margin="2dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/yaay"
                            android:contentDescription="@string/socialMediaImage">
                        </ImageButton>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@drawable/style_settings_page_box">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/version"
                    android:textAlignment="center"
                    android:textColor="@color/settings_page_color"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>